# lime-rtw

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
documentation/: events.md
src/: cli.rs  context.rs  events.rs  interval.rs  io.rs  job.rs  lib.rs  main.rs  sysinfo.rs  task.rs  utils.rs
src/ir/: job.rs  mod.rs
src/ir/timeline/: mod.rs
src/ir/timeline/layers/: base.rs  execution.rs  mod.rs  suspension.rs
src/job_separator/: dfa.rs  it_task.rs  mod.rs  sched_yield.rs  signatures.rs  suspension.rs  syscall.rs
src/model_extractors/: dd.rs  event_rate.rs  execution.rs  job_count.rs  mod.rs  rbf.rs  rbf_old.rs  suspension.rs  writer.rs
src/model_extractors/arrival/: arrival_curve.rs  mod.rs  sporadic.rs
src/model_extractors/arrival/periodic/: arrival.rs  mod.rs  release.rs
src/processors/: extract_job.rs  extract_model.rs  mod.rs  write_trace.rs
src/proto/: trace_event.proto
src/trace/: mod.rs  reader.rs  writer.rs
src/tracer/: assembler.rs  dd.rs  mod.rs  pid_namespace.rs
src/tracer/bpf/: lime_tracer.bpf.c  lime_tracer.h
src/view/: data.rs  mod.rs  process_list.rs  stats.rs  ui.rs
