[package]
name = "lime-rtw"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libc = "0.2"
plain = "0.2"
clap = { version = "4.0.24", features = ["std", "derive", "cargo"] }
signal-hook = "0.3.14"
sysinfo = "0.29.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
serde-hex = "0.1.0"
nix = "0.18.0"
glob = "0.3.0"
min-max-heap = "1.3.0"
nom = "7.1.3"
tdigest = "0.2"
duration-str = "0.7.0"
index_list = "0.2.11"
prost = "0.13"
prost-types = "0.13"
# TUI dependencies
crossterm = "0.26"
tui = { package = "ratatui", version = "0.23.0" }

[target.'cfg(target_os="linux")'.dependencies]
libbpf-rs = "0.21"
nc = "0.8"

[target.'cfg(target_os="linux")'.build-dependencies]
libbpf-cargo = "0.21"

[build-dependencies]
prost-build = "0.13"
