[package]
name = "lime-rtw"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libc = "0.2"
plain = "0.2"
clap = { version = "4.0.24", features = ["std", "derive", "cargo"] }
signal-hook = "0.4.3"
sysinfo = "0.38.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.46", features = ["formatting", "local-offset", "macros", "parsing"]}
serde-hex = "0.1.0"
nix = { version = "0.31", features = ["time", "signal", "process", "sched"] }
glob = "0.3.0"
min-max-heap = "1.3.0"
nom = "8.0.0"
tdigest = "0.2"
duration-str = "0.18.0"
index_list = "0.3"
prost = "0.14"
prost-types = "0.14"
# TUI dependencies
crossterm = "0.29"
tui = { package = "ratatui", version = "0.30.0" }

[target.'cfg(target_os="linux")'.dependencies]
libbpf-rs = "0.25"
nc = "0.9"

[target.'cfg(target_os="linux")'.build-dependencies]
libbpf-cargo = "0.25"

[build-dependencies]
prost-build = "0.14"
