[package]
name = "lime-rtw"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tui"]
proto = ["dep:prost", "dep:prost-types", "dep:prost-build"]
tui = ["dep:crossterm", "dep:tui"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
plain = "0.2"
clap = { version = "4.6", features = ["std", "derive", "cargo"] }
signal-hook = "0.4.3"
sysinfo = "0.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"]}
serde-hex = "0.1.0"
nix = { version = "0.31", features = ["time", "signal", "process", "sched", "ioctl"] }
glob = "0.3"
min-max-heap = "1.3"
tdigest = "0.2"
duration-str = "0.21.0"
index_list = "0.3"
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
rustc-hash = "2"
lime-model-extractors = { git = "https://github.com/LiME-org/lime-model-extractors" }
# TUI dependencies
crossterm = { version = "0.29", optional = true }
tui = { package = "ratatui", version = "0.30.0", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
libbpf-rs = "0.26"
nc = "0.9"

[target.'cfg(target_os="linux")'.build-dependencies]
libbpf-cargo = "0.26"

[build-dependencies]
prost-build = { version = "0.14", optional = true }

[profile.bench]
inherits = "release"
debug = true
strip = "none"
